Renames PageController and its routes

--- a/web/templates/fortune/index.html.pug
+++ b/web/templates/fortune/index.html.pug
@@ -3,6 +3,6 @@
 
   .row
     .col-lg-12
-      = link to: page_path(@conn, :show), class: "nav-link" do
+      = link to: fortune_path(@conn, :edit), class: "nav-link" do
         | Reveal Fortune
 
