--- a/web/templates/fortune/form.html.pug
+++ b/web/templates/fortune/form.html.pug
@@ -1,4 +1,4 @@
 = form_for @changeset, @action, fn f ->
- = text_input f, :fortune
+ = text_input f, :fortune, required: true
 
  = submit "Change your fortune"
