--- a/web/templates/fortune/form.html.pug
+++ b/web/templates/fortune/form.html.pug
@@ -1,4 +1,5 @@
 = form_for @changeset, @action, fn f ->
  = text_input f, :fortune, required: true
+  = error_tag f, :fortune
 
  = submit "Change your fortune"
