Adds fortune test cases

--- a/web/templates/fortune/edit.html.pug
+++ b/web/templates/fortune/edit.html.pug
@@ -3,4 +3,4 @@ h1.fortune-header= @fortune_cookie.fortune
 = render "form.html", changeset: @changeset, action: fortune_path(@conn, :update, @fortune_cookie)
 
 = link to: fortune_path(@conn, :show, @fortune_cookie), class: "nav-link" do
-  | I'll live with it
+  | It's OK. I'll manage.
