--- a/web/templates/fortune/form.html.pug
+++ b/web/templates/fortune/form.html.pug
@@ -1,5 +1,6 @@
 = form_for @changeset, @action, [class: "fortune-form"], fn f ->
- = text_input f, :fortune, class: "field", required: true
+  = label f, :fortune, class: "label"
+  = text_input f, :fortune, class: "field", required: true
   = error_tag f, :fortune
 
- = submit "Change your fortune"
+  = submit "Change your fortune"
