--- a/web/static/css/_variables.scss
+++ b/web/static/css/_variables.scss
@@ -1,1 +1,28 @@
+/*
+* Fonts
+*/
+$font-family-sans-serif: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$font-family-header: 'bebas-neue', $font-family-sans-serif;
+$font-size-base: 0.8rem; // Assumes the browser default, typically `16px`
+
+/*
+* Colors
+*/
+// Main palette
 $bg: #7A3E48;
+$header: #;
+$primary: #B8C1C9;
+
+// Neutrals
+$text-color: $primary;
+
+/*
+* Modular scale
+*/
+$modularscale: (
+  base: 1em,
+  ratio: 1.5
+);
+
+$ms-base: $font-size-base;
+$ms-ratio: 1.2;
