Initial design tweaks

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -1,7 +1,3 @@
-@import './base';
-@import 'modularscale-sass/stylesheets/modularscale';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap';
-
-html, body {
-  background: $bg;
-}
+@import 'modularscale-sass/stylesheets/modularscale';
+@import './common';
