--- a/web/templates/fortune/index.html.pug
+++ b/web/templates/fortune/index.html.pug
@@ -1,8 +1,5 @@
-.jumbotron
-  h2 Fortune Cookie
-
-  .row
-    .col-lg-12
-      = link to: fortune_path(@conn, :edit), class: "link" do
-        | Reveal Fortune
+.row
+  .block.col-lg-12
+    = link to: fortune_path(@conn, :edit), class: "btn -block -warm" do
+      | Reveal
 
