--- a/web/static/css/_base.scss
+++ b/web/static/css/_base.scss
@@ -1,31 +1,43 @@
-@import './variables';
 @import 'mixins/mixins';
-
-/*
- * Fonts
- */
-
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 
 html, body {
+  background: $bg;
   @include antialias;
+}
+
+.center {
+  padding: 160px 0;
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
 /*
  * Basic text
  */
 h1 {
-  @include font-size(5);
+  /* @include font-size(5); */
 }
 
 h2 {
-  @include font-size(4);
+  /* @include font-size(4); */
 }
 
 h3 {
-  @include font-size(3);
+  /* @include font-size(3); */
 }
 
 h4 {
-  @include font-size(2);
+  /* @include font-size(2); */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $mustard;
+  font-family: $font-family-header;
 }
