--- a/web/static/css/_variables.scss
+++ b/web/static/css/_variables.scss
@@ -3,18 +3,18 @@
 */
 $font-family-sans-serif: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 $font-family-header: 'bebas-neue', $font-family-sans-serif;
-$font-size-base: 0.8rem; // Assumes the browser default, typically `16px`
+$font-size-base: 16px;
 
 /*
 * Colors
 */
 // Main palette
 $bg: #7A3E48;
-$header: #;
 $primary: #B8C1C9;
 
 // Neutrals
-$text-color: $primary;
+$warm: #E18942;
+$mustard: #EECD86;
 
 /*
 * Modular scale
