--- a/web/static/css/components/button.scss
+++ b/web/static/css/components/button.scss
@@ -1,11 +1,6 @@
 @import '../common';
 
 .btn {
-  & {
-    font-family: $font-family-sans-serif;
-    font-size: $font-size-base;
-  }
-
   &.-block {
     padding: 10px 16px;
     line-height: 1.33333;
@@ -14,6 +9,10 @@
 
   &.-warm {
     background: $warm;
-    color: white;
+    color: $white;
+
+    &:hover {
+    color: $primary;
+    }
   }
 }
