Several route and template tweaks

--- a/web/templates/fortune/edit.html.pug
+++ b/web/templates/fortune/edit.html.pug
@@ -1,8 +1,6 @@
+= render "fortune_cookie.html", fortune_cookie: @fortune_cookie
 .row
-  .block.col-lg-12
-    h2= format_text(@fortune_cookie.fortune)
-
+  .content-block.col-lg-12
+    h4 Of course, you can change your fortune!
+    p Type in the text box your desired fortune and it will be changed accordingly.
     = render "form.html", changeset: @changeset, action: fortune_path(@conn, :update, @fortune_cookie)
-
-    = link to: fortune_path(@conn, :show, @fortune_cookie), class: "nav-link" do
-      | It's OK. I'll manage.
