--- a/web/templates/layout/flash.html.pug
+++ b/web/templates/layout/flash.html.pug
@@ -4,5 +4,5 @@
       = info
 
   = if error = get_flash(@conn, :error) do
-    p(class="alert alert-error" role="alert")
+    p(class="alert alert-warning" role="alert")
       = error
