--- a/web/templates/layout/nav.html.pug
+++ b/web/templates/layout/nav.html.pug
@@ -2,4 +2,4 @@ header.header
   nav(role="navigation")
     ul.nav.navbar-fixed-top.pull-right
       li
-        = link "", to: fortune_path(@conn, :index), class: "home-link"
+        = link "", to: fortune_path(@conn, :index), class: "link -home"
