--- a/web/templates/fortune/edit.html.pug
+++ b/web/templates/fortune/edit.html.pug
@@ -4,3 +4,6 @@
     h4 Of course, you can change your fortune!
     p Type in the text box your desired fortune and it will be changed accordingly.
     = render "form.html", changeset: @changeset, action: fortune_path(@conn, :update, @fortune_cookie)
+
+  = link to: fortune_path(@conn, :random), class: "link -warm -navigation-left" do
+    | Back
