--- a/web/templates/fortune/index.html.pug
+++ b/web/templates/fortune/index.html.pug
@@ -3,5 +3,5 @@
 .row
   .content-block.col-lg-12
     = link to: fortune_path(@conn, :random), class: "btn -block -warm" do
-      | Click me to reveal your fortune
+      | Reveal my fortune
 
