--- a/web/templates/fortune/random.html.pug
+++ b/web/templates/fortune/random.html.pug
@@ -7,4 +7,4 @@
       span.text
         | OR
     = link to: fortune_path(@conn, :show, @fortune_cookie), class: "link -warm" do
-      | It's OK. I'll manage.
+      | Accept my fortune
