--- a/web/static/css/components/button.scss
+++ b/web/static/css/components/button.scss
@@ -9,10 +9,11 @@
 
   &.-warm {
     background: $warm;
-    color: $white;
+    color: white;
 
     &:hover {
-    color: $primary;
+      background: $inset-warm;
+      color: white;
     }
   }
 }
