README.md enhancements

--- a/web/templates/fortune/show.html.pug
+++ b/web/templates/fortune/show.html.pug
@@ -4,4 +4,4 @@
   .content-block.col-lg-12
     p.text Want to crack more fortune cookies?
     = link to: fortune_path(@conn, :random), class: "btn -block -warm" do
-      | Click me to crack more cookies
+      | Click me
