Several layout and css cleanups

--- a/web/templates/fortune/edit.html.pug
+++ b/web/templates/fortune/edit.html.pug
@@ -1,4 +1,5 @@
-= render "fortune_cookie.html", fortune_cookie: @fortune_cookie
+= render "fortune.html", fortune_cookie: @fortune_cookie
+
 .row
   .content-block.col-lg-12
     h4 Of course, you can change your fortune!
