--- a/web/templates/fortune/show.html.pug
+++ b/web/templates/fortune/show.html.pug
@@ -1,4 +1,4 @@
-= render "fortune_cookie.html", fortune_cookie: @fortune_cookie
+= render "fortune.html", fortune_cookie: @fortune_cookie
 
 .row
   .content-block.col-lg-12
