--- a/web/templates/fortune/random.html.pug
+++ b/web/templates/fortune/random.html.pug
@@ -1,4 +1,4 @@
-= render "fortune_cookie.html", fortune_cookie: @fortune_cookie
+= render "fortune.html", fortune_cookie: @fortune_cookie
 .row
   .content-block.col-lg-12
     = link to: fortune_path(@conn, :edit, @fortune_cookie), class: "btn -block -warm" do
