--- a/web/templates/layout/app.html.pug
+++ b/web/templates/layout/app.html.pug
@@ -14,6 +14,7 @@ html(lang="en")
     .container
       = render "nav.html", conn: @conn
       .center
+        = render "img.html", assigns
         = render "flash.html", conn: @conn
         = render @view_module, @view_template, assigns
 
